--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,22 @@
   display: flex;
   justify-content: space-between;
   background-color: rgb(19, 34, 53);
-  height: 71px;
+  height: 100px;
+}
+
+.main-nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: aliceblue;
+  width: 1440px;
+  margin: auto;
 }
 
 .logo {
   background-color: aliceblue;
-  width: 100px;
-  height: 50px;
-  display: inline;
+  width: 289px;
+  height: 100px;
 }
 
 .nav-links {
@@ -31,11 +39,6 @@ h1 {
 }
 
 /* main content */
-
-.container-main-content {
-  width: 400px;
-  /* background-color: antiquewhite; */
-}
 
 h1 {
   font-size: 50px;
@@ -64,16 +67,15 @@ h1 {
 .branco {
   background-color: #132235;
   color: aliceblue;
-  height: 550px;
+  height: 775px;
   align-items: center;
   display: flex;
   justify-content: center;
 }
 
 .about-section {
-  /* background-color: violet; */
   display: flex;
-  width: 1200px;
+  width: 1440px;
   justify-content: space-around;
 }
 
@@ -122,4 +124,27 @@ button.button {
   border: 0;
   margin: 7px;
   padding: 10px 25px;
+}
+
+footer p {
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: aliceblue;
+  width: 1440px;
+  margin: auto;
+}
+
+.redes-sociais {
+  display: flex;
+  justify-content: space-between;
+  width: 220px;
+  height: 30px;
+  margin: 30px 0;
 }
